syntax = "proto3";

// Namespace for the generated code
option csharp_namespace = "DocumentStore.Protos";

// Start with grpc. so that we can distinguish gRPC call in C# middleware easier
package grpc.documentstore;

// Standard way of transmitting the project variables as a parameter to a gRPC method
message GrpcProjectVariables {
  string userId = 1;
  string projectId = 2;
  string versionId = 3;
  string did = 5;
  string editorId = 6;
  string editorContentType = 7;
  string reportTypeId = 8;
  string outputChannelType = 9;
  string outputChannelVariantId = 10;
  string outputChannelVariantLanguage = 11;
  // User information for Git commits and audit trails
  string userFirstName = 12;
  string userLastName = 13;
  string userEmail = 14;
  string userDisplayName = 15;
}

// Standard response message used across all services
message TaxxorGrpcResponseMessage {
  bool success = 1;
  string message = 2;
  string debuginfo = 3;
  string data = 4;
  bytes binary = 5;
}

// Configuration Service
service ConfigurationService {
  rpc GetServiceInformation (GetServiceInformationRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetProjectConfiguration (GetProjectConfigurationRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetDataConfiguration (GetDataConfigurationRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetProjectTemplates (GetProjectTemplatesRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetTaxxorServices (GetTaxxorServicesRequest) returns (TaxxorGrpcResponseMessage);
}

message GetServiceInformationRequest {}
message GetProjectConfigurationRequest {}
message GetDataConfigurationRequest {}
message GetProjectTemplatesRequest {}
message GetTaxxorServicesRequest {}

// File Management Service
service FileManagementService {
  rpc CheckFileExists (FileExistsRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetFileContents (FileContentsRequest) returns (TaxxorGrpcResponseMessage);
  rpc DeleteDirectory (DeleteDirectoryRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetDirectoryContents (DirectoryContentsRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetFileProperties (FilePropertiesRequest) returns (TaxxorGrpcResponseMessage);
  rpc CopyDirectory (CopyDirectoryRequest) returns (TaxxorGrpcResponseMessage);
}

message FileExistsRequest {
  string location_id = 1;
  string path = 2;
  string relative_to = 3;
}

message FileContentsRequest {
  string location_id = 1;
  string path = 2;
  string relative_to = 3;
}

message DeleteDirectoryRequest {
  string location_id = 1;
  string directory_path = 2;
  string relative_to = 3;
  bool leave_root_folder = 4;
}

message DirectoryContentsRequest {
  string location_id = 1;
  string path = 2;
  string relative_to = 3;
}

message FilePropertiesRequest {
  string location_id = 1;
  string path = 2;
  string relative_to = 3;
}

message CopyDirectoryRequest {
  string source_location_id = 1;
  string source_path = 2;
  string source_relative_to = 3;
  string target_location_id = 4;
  string target_path = 5;
  string target_relative_to = 6;
  bool override_target_files = 7;
  bool create_target_directory = 8;
}

// Filing Composer Data Service - Manages filing composer data (source data for filing sections)
service FilingComposerDataService {
  rpc GetFilingComposerData (GetFilingComposerDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc SetFilingComposerData (SetFilingComposerDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetFilingComposerDataList (GetFilingComposerDataListRequest) returns (TaxxorGrpcResponseMessage);
  rpc SaveSourceData (SaveSourceDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc DeleteSourceData (DeleteSourceDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc CreateSourceData (CreateSourceDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetSourceDataOverview (GetSourceDataOverviewRequest) returns (TaxxorGrpcResponseMessage);
  rpc CloneSectionLanguageData (CloneSectionLanguageDataRequest) returns (TaxxorGrpcResponseMessage);
}

message GetFilingComposerDataRequest {
    GrpcProjectVariables grpcProjectVariables = 1;
    string did = 2;
    string dataType = 3;
    bool debug = 4;
}

// Filing Hierarchy Service - Batch 3
service FilingHierarchyService {
  rpc LoadHierarchy (LoadHierarchyRequest) returns (TaxxorGrpcResponseMessage);
  rpc SaveHierarchy (SaveHierarchyRequest) returns (TaxxorGrpcResponseMessage);
}

message SetFilingComposerDataRequest {
  string id = 1;
  string data = 2;
}

message GetFilingComposerDataListRequest {}

// Project Management Service
service ProjectManagementService {
  rpc ListAvailableProjects (ListAvailableProjectsRequest) returns (TaxxorGrpcResponseMessage);
  rpc CreateProject (CreateProjectRequest) returns (TaxxorGrpcResponseMessage);
  rpc UpdateProject (UpdateProjectRequest) returns (TaxxorGrpcResponseMessage);
  rpc DeleteProject (DeleteProjectRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetProjectDetails (GetProjectDetailsRequest) returns (TaxxorGrpcResponseMessage);
}

message ListAvailableProjectsRequest {}

message CreateProjectRequest {
  string name = 1;
  string template = 2;
  string data = 3;
}

message UpdateProjectRequest {
  string id = 1;
  string data = 2;
}

message DeleteProjectRequest {
  string id = 1;
}

message GetProjectDetailsRequest {
  string id = 1;
}

// Sandbox Service
service SandboxService {
  rpc ExecuteCommand (ExecuteCommandRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetSandboxStatus (GetSandboxStatusRequest) returns (TaxxorGrpcResponseMessage);
}

message ExecuteCommandRequest {
  string command = 1;
  string parameters = 2;
}

message GetSandboxStatusRequest {}

// System State Service
service SystemStateService {
  rpc GetSystemState (GetSystemStateRequest) returns (TaxxorGrpcResponseMessage);
  rpc SetSystemState (SetSystemStateRequest) returns (TaxxorGrpcResponseMessage);
}

message GetSystemStateRequest {}

message SetSystemStateRequest {
  string state = 1;
}

// User Data Service
service UserDataService {
  rpc GetUserData (GetUserDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc SetUserData (SetUserDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc GetUserTempData (GetUserTempDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc SetUserTempData (SetUserTempDataRequest) returns (TaxxorGrpcResponseMessage);
  rpc DeleteUserTempData (DeleteUserTempDataRequest) returns (TaxxorGrpcResponseMessage);
}

message GetUserDataRequest {
  string key = 1;
}

message SetUserDataRequest {
  string key = 1;
  string data = 2;
}

message GetUserTempDataRequest {
  string key = 1;
}

message SetUserTempDataRequest {
  string key = 1;
  string data = 2;
}

message DeleteUserTempDataRequest {
  string key = 1;
}

// Binary File Management Service
service BinaryFileManagementService {
  rpc StoreFile (StoreFileRequest) returns (TaxxorGrpcResponseMessage);
}

message StoreFileRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string assetType = 2;
  string folderPath = 3;
  string fileName = 4;
  bytes fileData = 5;
  bool normalizeFilename = 6;
}

message SaveSourceDataRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string data = 2;
  string did = 3;
  string contentLanguage = 4;
}

message DeleteSourceDataRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string xmlDeleteActions = 2;
  string dataType = 3;
}

message CreateSourceDataRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string sectionId = 2;
  string data = 3;
  string dataType = 4;
}

message GetSourceDataOverviewRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
}

message CloneSectionLanguageDataRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string sourceLang = 2;
  string targetLang = 3;
  bool includeChildren = 4;
}

// Batch 3: Hierarchy Management
message LoadHierarchyRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
}

message SaveHierarchyRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string hierarchy = 2;
  bool commitChanges = 3;
}

// Batch 4: Utility Operations
service FilingDataUtilityService {
  rpc FindReplace (FindReplaceRequest) returns (TaxxorGrpcResponseMessage);
  rpc ClearCache (ClearCacheRequest) returns (TaxxorGrpcResponseMessage);
}

message FindReplaceRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
  string searchFragment = 2;
  string replaceFragment = 3;
  bool onlyInUse = 4;
  bool includeFootnotes = 5;
  bool dryRun = 6;
}

message ClearCacheRequest {
  GrpcProjectVariables grpcProjectVariables = 1;
}